--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
   "homepage": "http://KG-oogo.github.io/agri-web-website",
   "name": "agri-web-website",
-  "version": "0.1.0",
+  "version": "0.0.2",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "@material-ui/core": "4.10.2",
+    "@material-ui/icons": "4.9.1",
+    "@testing-library/jest-dom": "4.2.4",
+    "@testing-library/react": "9.5.0",
+    "@testing-library/user-event": "7.2.1",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-router-dom": "5.2.0",
+    "react-scripts": "3.4.1",
+    "react-spring": "8.0.27"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,6 +39,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.0.0"
+    "gh-pages": "3.0.0"
   }
 }
